--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -87,55 +87,36 @@
                           <th class="product-remove">Remove</th>
                         </tr>
                       </thead>
+					  {% for item in items %}
                       <tbody>
                         <tr>
                           <td class="product-thumbnail">
-                            <img src="{% static 'app/images/product-1.png' %}" alt="Image" class="img-fluid">
+                            <img src="{{item.product.ImageURL}}" alt="Image" class="img-fluid">
                           </td>
                           <td class="product-name">
-                            <h2 class="h5 text-black">Product 1</h2>
+                            <h2 class="h5 text-black">{{item.product.name}}</h2>
                           </td>
-                          <td>$49.00</td>
+                          <td>${{item.product.price | floatformat:2}}</td>
                           <td>
                             <div class="input-group mb-3 d-flex align-items-center quantity-container" style="max-width: 120px;">
                               <div class="input-group-prepend">
                                 <button class="btn btn-outline-black decrease" type="button">&minus;</button>
                               </div>
-                              <input type="text" class="form-control text-center quantity-amount" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                              <input type="text" class="form-control text-center quantity-amount" value="{{item.quantity}}" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                               <div class="input-group-append">
                                 <button class="btn btn-outline-black increase" type="button">&plus;</button>
                               </div>
                             </div>
         
                           </td>
-                          <td>$49.00</td>
+                          <td>$</td>
                           <td><a href="#" class="btn btn-black btn-sm">X</a></td>
                         </tr>
         
-                        <tr>
-                          <td class="product-thumbnail">
-                            <img src="{% static 'app/images/product-2.png' %}" alt="Image" class="img-fluid">
-                          </td>
-                          <td class="product-name">
-                            <h2 class="h5 text-black">Product 2</h2>
-                          </td>
-                          <td>$49.00</td>
-                          <td>
-                            <div class="input-group mb-3 d-flex align-items-center quantity-container" style="max-width: 120px;">
-                              <div class="input-group-prepend">
-                                <button class="btn btn-outline-black decrease" type="button">&minus;</button>
-                              </div>
-                              <input type="text" class="form-control text-center quantity-amount" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                              <div class="input-group-append">
-                                <button class="btn btn-outline-black increase" type="button">&plus;</button>
-                              </div>
-                            </div>
-        
-                          </td>
-                          <td>$49.00</td>
-                          <td><a href="#" class="btn btn-black btn-sm">X</a></td>
-                        </tr>
+                        
+                        
                       </tbody>
+					  {% endfor %}
                     </table>
                   </div>
                 </form>
@@ -151,18 +132,7 @@
                       <button class="btn btn-outline-black btn-sm btn-block" onclick="window.location={% url "shop" %}">Continue Shopping</button>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-md-12">
-                      <label class="text-black h4" for="coupon">Coupon</label>
-                      <p>Enter your coupon code if you have one.</p>
-                    </div>
-                    <div class="col-md-8 mb-3 mb-md-0">
-                      <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
-                    </div>
-                    <div class="col-md-4">
-                      <button class="btn btn-black">Apply Coupon</button>
-                    </div>
-                  </div>
+                  
                 </div>
                 <div class="col-md-6 pl-5">
                   <div class="row justify-content-end">
@@ -174,10 +144,10 @@
                       </div>
                       <div class="row mb-3">
                         <div class="col-md-6">
-                          <span class="text-black">Subtotal</span>
+                          <span class="text-black">Items</span>
                         </div>
                         <div class="col-md-6 text-right">
-                          <strong class="text-black">$230.00</strong>
+                          <strong class="text-black">{{order.get_cart_items}}</strong>
                         </div>
                       </div>
                       <div class="row mb-5">
@@ -185,7 +155,7 @@
                           <span class="text-black">Total</span>
                         </div>
                         <div class="col-md-6 text-right">
-                          <strong class="text-black">$230.00</strong>
+                          <strong class="text-black">${{order.get_cart_total | floatformat:2}}</strong>
                         </div>
                       </div>
         
