--- a/app/templates/app/checkout.html
+++ b/app/templates/app/checkout.html
@@ -145,21 +145,19 @@
 		                    <th>Total</th>
 		                  </thead>
 		                  <tbody>
+							{% for item in items  %}
 		                    <tr>
-		                      <td>Top Up T-Shirt <strong class="mx-2">x</strong> 1</td>
-		                      <td>$250.00</td>
+		                      <td>{{item.product.name}}<strong class="mx-2">x</strong> {{item.quantity}}</td>
+		                      <td>${{item.product.price | floatformat:2}}</td>
 		                    </tr>
+		                    {% endfor %}
 		                    <tr>
-		                      <td>Polo Shirt <strong class="mx-2">x</strong>   1</td>
-		                      <td>$100.00</td>
-		                    </tr>
-		                    <tr>
-		                      <td class="text-black font-weight-bold"><strong>Cart Subtotal</strong></td>
-		                      <td class="text-black">$350.00</td>
+		                      <td class="text-black font-weight-bold"><strong>Items</strong></td>
+		                      <td class="text-black">{{order.get_cart_items}}</td>
 		                    </tr>
 		                    <tr>
 		                      <td class="text-black font-weight-bold"><strong>Order Total</strong></td>
-		                      <td class="text-black font-weight-bold"><strong>$350.00</strong></td>
+		                      <td class="text-black font-weight-bold"><strong>${{order.get_cart_total | floatformat:2}}</strong></td>
 		                    </tr>
 		                  </tbody>
 		                </table>
