--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -9,8 +9,7 @@
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
-
-		<!-- Bootstrap CSS -->
+  		<!-- Bootstrap CSS -->
 		<link href="{%static 'app/css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="{%static 'app/css/tiny-slider.css' %}" rel="stylesheet">
@@ -109,7 +108,7 @@
                             </div>
         
                           </td>
-                          <td>$</td>
+                          <td>${{item.get_total | floatformat:2}}</td>
                           <td><a href="#" class="btn btn-black btn-sm">X</a></td>
                         </tr>
         
