--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -9,8 +9,8 @@
   	<meta name="description" content="" />
   	<meta name="keywords" content="bootstrap, bootstrap4" />
 	<link rel="shortcut icon" href="{% static 'app/images/favicon.png' %}">
-
-		<!-- Bootstrap CSS -->
+	
+	<!-- Bootstrap CSS -->
 	<link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 	<link href="{% static 'app/css/tiny-slider.css' %}" rel="stylesheet">
@@ -512,7 +512,8 @@
 		</footer>
 		<!-- End Footer Section -->	
 
-
+		<!-- JAVA SCRIPT -->
+		<script src={% static "app/js/cart.js" %}></script>
 		<script src="{%static 'app/js/bootstrap.bundle.min.js' %}"></script>
 		<script src="{%static 'app/js/tiny-slider.js' %}"></script>
 		<script src="{%static 'app/js/custom.js' %}"></script>
