--- a/app/templates/app/services.html
+++ b/app/templates/app/services.html
@@ -414,7 +414,8 @@
 		</footer>
 		<!-- End Footer Section -->	
 
-
+		<!-- JAVA SCRIPT -->
+		<script src={% static "app/js/cart.js" %}></script>
 		<script src="{%static 'app/js/bootstrap.bundle.min.js' %}"></script>
 		<script src="{%static 'app/js/tiny-slider.js' %}"></script>
 		<script src="{%static 'app/js/custom.js' %}"></script>
