--- a/app/templates/app/shop.html
+++ b/app/templates/app/shop.html
@@ -9,7 +9,11 @@
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
-
+		<!-- JAVA SCRIPT-->
+  		<script type="text/javascript">
+			var user = '{{request.user}}'
+		</script>
+		
 		<!-- Bootstrap CSS -->
 		<link href="{%static 'app/css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -82,7 +86,7 @@
 							<h3 class="product-title">{{product.name}}</h3>
 							<strong class="product-price">${{product.price | floatformat:2}}</strong>
 
-							<span class="icon-cross">
+							<span data-product={{product.id}} data-action="add" class="icon-cross update-cart">
 								<img src="{%static 'app/images/cross.svg'%}" class="img-fluid">
 							</span>
 						</a>
@@ -229,7 +233,8 @@
 		</footer>
 		<!-- End Footer Section -->	
 
-
+		<!-- JAVA SCRIPT -->
+		<script src={% static "app/js/cart.js" %}></script>
 		<script src="{%static 'app/js/bootstrap.bundle.min.js' %}"></script>
 		<script src="{%static 'app/js/tiny-slider.js' %}"></script>
 		<script src="{%static 'app/js/custom.js' %}"></script>
