--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -98,13 +98,14 @@
                           <td>${{item.product.price | floatformat:2}}</td>
                           <td>
                             <div class="input-group mb-3 d-flex align-items-center quantity-container" style="max-width: 120px;">
-                              <div class="input-group-prepend">
-                                <button class="btn btn-outline-black decrease" type="button">&minus;</button>
-                              </div>
-                              <input type="text" class="form-control text-center quantity-amount" value="{{item.quantity}}" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                              <div class="input-group-append">
-                                <button class="btn btn-outline-black increase" type="button">&plus;</button>
-                              </div>
+								<div class="input-group-prepend">
+									<button data-product="{{ item.product.id }}" data-action="remove" class="btn btn-outline-black decrease update-cart" type="button">&minus;</button>
+								</div>
+								<input type="text" class="form-control text-center quantity-amount" value="{{ item.quantity }}" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+								<div class="input-group-append">
+									<button data-product="{{ item.product.id }}" data-action="add" class="btn btn-outline-black increase update-cart" type="button">&plus;</button>
+								</div>
+								
                             </div>
         
                           </td>
