--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -9,7 +9,26 @@
   	<meta name="description" content="" />
   	<meta name="keywords" content="bootstrap, bootstrap4" />
 	<link rel="shortcut icon" href="{% static 'app/images/favicon.png' %}">
-	
+	<!-- JAVA SCRIPT-->
+	<script type="text/javascript">
+		var user = '{{request.user}}'
+		function getCookie(name) {
+			let cookieValue = null;
+			if (document.cookie && document.cookie !== '') {
+				const cookies = document.cookie.split(';');
+				for (let i = 0; i < cookies.length; i++) {
+					const cookie = cookies[i].trim();
+					// Does this cookie string begin with the name we want?
+					if (cookie.substring(0, name.length + 1) === (name + '=')) {
+						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+						break;
+					}
+				}
+			}
+			return cookieValue;
+		}
+		const csrftoken = getCookie('csrftoken');
+	</script>
 	<!-- Bootstrap CSS -->
 	<link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
