--- a/app/templates/app/shop.html
+++ b/app/templates/app/shop.html
@@ -12,8 +12,24 @@
 		<!-- JAVA SCRIPT-->
   		<script type="text/javascript">
 			var user = '{{request.user}}'
+			function getCookie(name) {
+				let cookieValue = null;
+				if (document.cookie && document.cookie !== '') {
+					const cookies = document.cookie.split(';');
+					for (let i = 0; i < cookies.length; i++) {
+						const cookie = cookies[i].trim();
+						// Does this cookie string begin with the name we want?
+						if (cookie.substring(0, name.length + 1) === (name + '=')) {
+							cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+							break;
+						}
+					}
+				}
+				return cookieValue;
+			}
+			const csrftoken = getCookie('csrftoken');
 		</script>
-		
+
 		<!-- Bootstrap CSS -->
 		<link href="{%static 'app/css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -81,7 +97,7 @@
 					{% for product in products %}
 		      		<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
+						<a class="product-item">
 							<img src="{{product.ImageURL}}" class="img-fluid product-thumbnail">
 							<h3 class="product-title">{{product.name}}</h3>
 							<strong class="product-price">${{product.price | floatformat:2}}</strong>
