--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -9,6 +9,25 @@
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
+	<script type="text/javascript">
+		var user = '{{request.user}}'
+		function getCookie(name) {
+			let cookieValue = null;
+			if (document.cookie && document.cookie !== '') {
+				const cookies = document.cookie.split(';');
+				for (let i = 0; i < cookies.length; i++) {
+					const cookie = cookies[i].trim();
+					// Does this cookie string begin with the name we want?
+					if (cookie.substring(0, name.length + 1) === (name + '=')) {
+						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+						break;
+					}
+				}
+			}
+			return cookieValue;
+		}
+		const csrftoken = getCookie('csrftoken');
+	</script>
   		<!-- Bootstrap CSS -->
 		<link href="{%static 'app/css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -101,10 +120,10 @@
 								<div class="input-group-prepend">
 									<button data-product="{{ item.product.id }}" data-action="remove" class="btn btn-outline-black decrease update-cart" type="button">&minus;</button>
 								</div>
-								<input type="text" class="form-control text-center quantity-amount" value="{{ item.quantity }}" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+								<span data-product="{{ item.product.id }}" class="form-control text-center quantity-amount">{{ item.quantity }}</span>
 								<div class="input-group-append">
 									<button data-product="{{ item.product.id }}" data-action="add" class="btn btn-outline-black increase update-cart" type="button">&plus;</button>
-								</div>
+								</div>								
 								
                             </div>
         
@@ -125,9 +144,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="row mb-5">
-                    <div class="col-md-6 mb-3 mb-md-0">
-                      <button class="btn btn-black btn-sm btn-block">Update Cart</button>
-                    </div>
+                    
                     <div class="col-md-6">
                       <button class="btn btn-outline-black btn-sm btn-block" onclick="window.location={% url "shop" %}">Continue Shopping</button>
                     </div>
@@ -277,7 +294,7 @@
 		</footer>
 		<!-- End Footer Section -->	
 
-
+		<script src="{% static 'app/js/cart.js' %}"></script>
 		<script src="{%static 'app/js/bootstrap.bundle.min.js' %}"></script>
 		<script src="{%static 'app/js/tiny-slider.js' %}"></script>
 		<script src="{%static 'app/js/custom.js' %}"></script>
