--- a/app/templates/app/shop.html
+++ b/app/templates/app/shop.html
@@ -250,7 +250,7 @@
 		<!-- End Footer Section -->	
 
 		<!-- JAVA SCRIPT -->
-		<script src={% static "app/js/cart.js" %}></script>
+		<script src="{% static 'app/js/cart.js' %}"></script>
 		<script src="{%static 'app/js/bootstrap.bundle.min.js' %}"></script>
 		<script src="{%static 'app/js/tiny-slider.js' %}"></script>
 		<script src="{%static 'app/js/custom.js' %}"></script>
